--- a/css/Site.css
+++ b/css/Site.css
@@ -1,14 +1,12 @@
 ﻿body {
   background: fixed;
-background-image: url(pics/notebook.jpg);
+background-image: url(/Users/cameronrobinson/Git_Repos/CLEHousingHack/Pics/skyscraper-450793_1920.jpg);
 
-color: #d9c7c6;
+color: white;
 background-repeat: no-repeat;
 background-size: cover;
 }
-nav {
-  background-color: #be9b7b;
-}
+
 #cardText {
   color: black;
 }
